# 2019

./: README.md
C/: Untitled 1.odt
C/01sololearn/: 01sololearn.cbp  main.c
C/BubbleSort/: BubbleSort.cbp  BubbleSort.depend  BubbleSort.layout  README.md  main.c
C/Curl_c_get/: get  get.c
C/Gtk+2_PhoneBook/: Gtk+2_PhoneBook.cbp  main.c
C/Gtk+2_book_example/: 01example.c  02example  02example.c  README.md
C/PhoneBook2019V01/: PhoneBook2019V01.cbp  PhoneBook2019V01.layout  main.c
Cpp/02Gtkmm_text_editor/: .text_editor.cpp.swo  editor  run.sh  text_editor.cpp
GNOMEJavaScript/gjs_grid/: boilerplate.gjs
GNOMEJavaScript/gjs_text_editor_builder/: .buildconfig  meson.build  org.gnome.Gjs_Text_Editor_Builder.json  org.gnome.Gjs_Text_Editor_Builder.json~
GNOMEJavaScript/hello_gnome/: org.gnome.Hello_Gnome.json
GNOMEJavaScript/hello_gnome/src/: meson.build
GNOMEJavaScript/hello_gnome1/: hellognome.js
Germana/: .lektion0.txt.swp  lektion0.txt  lektion10.odt
Gnome_C/: .anjuta_sym_db.db
Gnome_C/GTK+2_C_Librarie/: GTK+2_C_Librarie.cbp  GTK+2_C_Librarie.layout  main.c
Gnome_C/Gtk+2_PhoneBook/: Gtk+2_PhoneBook.layout
Gnome_C/Gtk+2_book_example/: 01example
JavaScript/: tutor01.html
JavaScript/boilerplate/: boilerplate.gjs
JavaScript/gjs_grid/: boilerplate.gjs
JavaScript/hello_gnome/: .buildconfig  meson.build
JavaScript/hello_gnome1/: hellognome.html  hellognome.html~  hellognome.js~
jQuery/: jquery01.html~
jQuery/boilerplate/: jquery01.html
python3webscraping/: bs4_test.py  web_scraping.py
python3webscraping/emag_ro/: emag_i7_08012019.html
(+36 files in other folders)
